--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5074,28 +5074,28 @@ input.checkbox {
 /*---------------------------------------
   28.1 Home2 Default  -------------------
   ---------------------------------------*/
-.home2-default .top-header {
+.home-default .top-header {
   background: #f5f5f5;
 }
-.home2-default .top-header .user-menu .anm {
+.home-default .top-header .user-menu .anm {
   color: #000;
 }
-.home2-default .top-header p,
-.home2-default .top-header a,
-.home2-default .top-header select,
-.home2-default .top-header .ad,
-.home2-default .top-header span.selected-currency,
-.home2-default .top-header .language-dd {
+.home-default .top-header p,
+.home-default .top-header a,
+.home-default .top-header select,
+.home-default .top-header .ad,
+.home-default .top-header span.selected-currency,
+.home-default .top-header .language-dd {
   color: #000;
 }
-.home2-default .slideshow .slideshow__title {
+.home-default .slideshow .slideshow__title {
   color: #000;
   font-size: 55px;
   font-weight: 700;
   font-family: Poppins, Helvetica, Tahoma, Arial, sans-serif;
   text-transform: none;
 }
-.home2-default .slideshow .slideshow__subtitle {
+.home-default .slideshow .slideshow__subtitle {
   color: #000;
   font-size: 26px;
   text-transform: none;
@@ -5103,19 +5103,19 @@ input.checkbox {
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 0);
 }
 
-.home2-default .section-header h2,
-.home2-default .section-header .h2 {
+.home-default .section-header h2,
+.home-default .section-header .h2 {
   font-family: Poppins, Helvetica, Tahoma, Arial, sans-serif;
   font-size: 1.92308em;
   text-transform: none;
   letter-spacing: 0.03em;
 }
 
-.home2-default .hero--large {
+.home-default .hero--large {
   background-attachment: fixed;
 }
 
-.home2-default .grid-products .slick-arrow {
+.home-default .grid-products .slick-arrow {
   margin-top: -30px;
 }
 /*---------------------------------------
